Added pictures to posts, displayed on index page above caption

--- a/insta_pik/app/views/posts/index.html.erb
+++ b/insta_pik/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
 <% if @posts.any? %>
   <% @posts.each do |post| %>
-    <p> <%= post.caption %> </p>
+    <%= image_tag post.image.url(:medium) %><br><br>
+    <%= post.caption %>
     <br><br>
   <% end %>
 <% else %>
