--- a/insta_pik/app/views/posts/new.html.erb
+++ b/insta_pik/app/views/posts/new.html.erb
@@ -1,4 +1,5 @@
-<%= form_for Post.new do |po| %>
+<%= form_for Post.new, html: {multipart: true} do |po| %>
+  <%= po.file_field :image %>
   <%= po.label :caption %>
   :  <%= po.text_field :caption%>
   <%= po.submit %>
